@@ -209,6 +209,14 @@ const GtkBorder_ornull * gtk_entry_get_inner_border (GtkEntry *entry);
 
 #endif
 
+#if GTK_CHECK_VERSION(2, 11, 0) /* FIXME: 2.12 */
+
+void gtk_entry_set_cursor_hadjustment (GtkEntry *entry, GtkAdjustment_ornull *adjustment);
+
+GtkAdjustment_ornull* gtk_entry_get_cursor_hadjustment (GtkEntry *entry);
+
+#endif
+
 ##
 ## hey, these are deprecated!  is that new as of 2.3.x?
 ##
